--- a/Semantische html/about.html
+++ b/Semantische html/about.html
@@ -4,8 +4,12 @@
         <title> About </title>
     </head>
     <body>
-       Dit project is onderdeeel van de cursus Web Development<br>
-       <a href="index.html">Ga terug naar de Home pagina</a><br>
-       <a href="https://www.google.com" target="_blank">Ga hier naar Google</a>
+        <heading>
+            Dit project is onderdeeel van de cursus Web Development<br>
+        </heading>
+        <nav>
+            <a href="index.html">Ga terug naar de Home pagina</a><br>
+            <a href="https://www.google.com" target="_blank">Ga hier naar Google</a>
+        </nav>
     </body>
 </html>
