css basics opdracht

--- a/css basics/index.html
+++ b/css basics/index.html
@@ -4,12 +4,13 @@
 <head>
     <!-- hier zet je de code in de head tags -->
     <title> Dit is mijn index pagina </title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
     <!-- hier zet je de code in de body tags-->
     <header>
-        <h1>Winc Academy</h1>
+        <h1 class="black-border">Winc Academy</h1>
         <h2>Tweede opdracht</h2>
     </header>
     <hr>
@@ -23,10 +24,10 @@
     </main>
     <br>
     <aside>
-        <img src="Sintzwaait.jpg" width="100"><br>
+        <img src="Sintzwaait.jpg" width="100" class="black-border"><br>
     </aside>
     <nav>
-        <a href="about.html">Ga naar de About pagina</a>
+        <a id="green-back" href="about.html">Ga naar de About pagina</a>
     </nav>
 </body>
 
