--- a/8 Basic HTML form/contact.html
+++ b/8 Basic HTML form/contact.html
@@ -10,7 +10,7 @@
         Vul het formulier in om contact op te nemen<br>
     </heading>
     <main>
-        <form name="contact" method="post" data-netlify="true">
+        <form name="contact" method="POST" data-netlify="true">
             <label>Naam:</label> &nbsp;<input name="naam" type="text" /><br />
             <label>Email:</label> &nbsp;<input name="email" type="email" /><br />
             <label>Opmerking:</label> &nbsp;<input name="opmerkingen" type="text" /><br />
