--- a/9 Complex Form/index.html
+++ b/9 Complex Form/index.html
@@ -39,6 +39,10 @@
             <li>
                 <a href="contact.html">Ga naar de Contact pagina</a>
             </li>
+            <br />
+            <li>
+                <a href="formulier.html">Ga naar het recepten formulier</a>
+            </li>
         </ul>
     </nav>
 </body>
