form naam aangepast

--- a/9 Complex Form/complex_form.html
+++ b/9 Complex Form/complex_form.html
@@ -10,7 +10,7 @@
         Vul het formulier in om contact op te nemen<br>
     </heading>
     <main>
-        <form name="complex formulier" method="POST" data-netlify="true">
+        <form name="complex_formulier" method="POST" data-netlify="true">
             <label>Naam:</label> &nbsp;<input name="naam" type="text" /><br />
             <label>Email:</label> &nbsp;<input name="email" type="email" /><br />
             <label>Telefoonnr:</label> &nbsp;<input name="telnr" type="tel" pattern="06-[0-9]{8}" /><br />
